--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "fast-glob": "^3.2.6",
     "next": "11.0.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "remark": "^13.0.0",
+    "remark-html": "^13.0.1"
   },
   "devDependencies": {
     "@types/node": "^15.14.0",
