--- a/package.json
+++ b/package.json
@@ -10,11 +10,10 @@
   },
   "dependencies": {
     "fast-glob": "^3.2.6",
+    "micromark": "^3.0.0",
     "next": "11.0.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "remark": "^13.0.0",
-    "remark-html": "^13.0.1"
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
     "@types/node": "^15.14.0",
@@ -22,6 +21,7 @@
     "eslint": "7.29.0",
     "eslint-config-next": "11.0.1",
     "eslint-config-prettier": "^8.3.0",
+    "next-transpile-modules": "^8.0.0",
     "typescript": "4.3.4"
   }
 }
