--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "fast-glob": "^3.2.6",
+    "gray-matter": "^4.0.3",
     "micromark": "^3.0.0",
     "next": "11.0.1",
     "react": "17.0.2",
