--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@types/node": "^15.14.0",
     "@types/react": "17.0.11",
+    "@typescript-eslint/eslint-plugin": "^4.28.3",
     "eslint": "7.29.0",
     "eslint-config-next": "11.0.1",
     "eslint-config-prettier": "^8.3.0",
