--- a/.eslintrc
+++ b/.eslintrc
@@ -1,11 +1,11 @@
 {
-  "plugins": ["@typescript-eslint"],
+  "parser": "@typescript-eslint/parser",
+  "plugins": ["@typescript-eslint", "jest"],
   "extends": [
-    "next",
     "eslint:recommended",
-    "plugin:@typescript-eslint/eslint-recommended",
     "plugin:@typescript-eslint/recommended",
     "next/core-web-vitals",
     "prettier"
-  ]
+  ],
+  "env": { "browser": true, "node": true, "jest/globals": true }
 }
