--- a/package.json
+++ b/package.json
@@ -6,25 +6,32 @@
     "dev": "NODE_OPTIONS='--inspect' next dev",
     "build": "next build",
     "start": "next start",
+    "test": "jest",
     "lint": "next lint"
   },
   "dependencies": {
     "@isomorphic-git/cors-proxy": "^2.7.0",
+    "@kvs/storage": "^1.2.0",
     "fast-glob": "^3.2.6",
     "gray-matter": "^4.0.3",
     "micromark": "^3.0.0",
-    "next": "11.0.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "next": "12",
+    "octokit": "^1.1.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "@types/jest": "^27.0.3",
     "@types/node": "^15.14.0",
     "@types/react": "17.0.11",
-    "@typescript-eslint/eslint-plugin": "^4.28.3",
+    "@typescript-eslint/eslint-plugin": "^5.8.0",
+    "@typescript-eslint/parser": "^5.8.0",
     "eslint": "7.29.0",
     "eslint-config-next": "11.0.1",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-jest": "^25.3.0",
+    "jest": "^27.4.5",
     "next-transpile-modules": "^8.0.0",
-    "typescript": "4.3.4"
+    "typescript": "^4.5.4"
   }
 }
