feat: add github login

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,5 @@
 {
-  "jest.jestCommandLine": "yarn jest"
+  "jest.jestCommandLine": "yarn run test",
+  "jest.autoRun": { "watch": true },
+  "jest.debugMode": true
 }
